# TrafficMonitor

./: .gitignore  CMakeLists.txt  Help.md  Help_en-us.md  Help_pl-pl.md  LICENSE  LICENSE_CN  README.md  README_en-us.md  README_pl-pl.md  README_zh-tw.md  Release.7z  TrafficMonitor.sln  TrafficMonitor_Lite.sln  version.info  version_utf8.info  皮肤制作教程.md
.github/ISSUE_TEMPLATE/: BugReport_en.yaml  BugReport_zh.yaml  FeatureRequest_en.yaml  FeatureRequest_zh.yaml
.github/workflows/: c-cpp.yml  main.yml  test_build.yml
InnoSetupCompiler/: README.md  Setup.iss
OpenHardwareMonitorApi/: AssemblyInfo.cpp  CMakeLists.txt  LibreHardwareMonitorLib.xml  OpenHardwareMonitorApi.vcxproj  OpenHardwareMonitorApi.vcxproj.filters  OpenHardwareMonitorImp.cpp  OpenHardwareMonitorImp.h  ReadMe.txt  Stdafx.cpp  Stdafx.h  UpdateVisitor.cpp  UpdateVisitor.h  app.rc
OpenHardwareMonitorLib/: OpenHardwareMonitorLib.csproj
OpenHardwareMonitorLib/Collections/: IReadOnlyArray.cs  ListSet.cs  Pair.cs  ReadOnlyArray.cs  RingCollection.cs
OpenHardwareMonitorLib/Hardware/: Computer.cs  Control.cs  FirmwareTable.cs  GroupAffinity.cs  Hardware.cs  HexStringArray.cs  IComputer.cs  IControl.cs  IElement.cs  IGroup.cs  IHardware.cs  IOControlCode.cs  IParameter.cs  ISensor.cs  ISettings.cs  IVisitor.cs  Identifier.cs  KernelDriver.cs  Opcode.cs  OperatingSystem.cs  PInvokeDelegateFactory.cs  Parameter.cs  Ring0.cs  SMBIOS.cs  Sensor.cs  SensorVisitor.cs  ThreadAffinity.cs  WinRing0.sys
OpenHardwareMonitorLib/Hardware/ATI/: ADL.cs  ATIGPU.cs  ATIGroup.cs
OpenHardwareMonitorLib/Hardware/CPU/: AMD0FCPU.cs  AMD10CPU.cs  AMD17CPU.cs  AMDCPU.cs  CPUGroup.cs  CPUID.cs  CPULoad.cs  GenericCPU.cs  IntelCPU.cs
OpenHardwareMonitorLib/Hardware/HDD/: AbstractHarddrive.cs  DebugSmart.cs  DriveAttributeValue.cs  DriveThresholdValue.cs  HDDGeneric.cs  HarddriveGroup.cs  ISmart.cs  NamePrefixAttribute.cs  RequireSmartAttribute.cs  SSDIndilinx.cs  SSDIntel.cs  SSDMicron.cs  SSDPlextor.cs  SSDSamsung.cs  SSDSandforce.cs  SmartAttribute.cs  SmartNames.cs  WindowsSmart.cs
OpenHardwareMonitorLib/Hardware/Heatmaster/: Heatmaster.cs  HeatmasterGroup.cs
OpenHardwareMonitorLib/Hardware/LPC/: Chip.cs  F718XX.cs  ISuperIO.cs  IT87XX.cs  LMSensors.cs  LPCIO.cs  LPCPort.cs  NCT677X.cs  W836XX.cs
OpenHardwareMonitorLib/Hardware/Mainboard/: GigabyteTAMG.cs  Identification.cs  Mainboard.cs  MainboardGroup.cs  Manufacturer.cs  Model.cs  SuperIOHardware.cs
OpenHardwareMonitorLib/Hardware/Nvidia/: NVAPI.cs  NVML.cs  NvidiaGPU.cs  NvidiaGroup.cs
OpenHardwareMonitorLib/Hardware/RAM/: GenericRAM.cs  RAMGroup.cs
OpenHardwareMonitorLib/Hardware/TBalancer/: FTD2XX.cs  TBalancer.cs  TBalancerGroup.cs
OpenHardwareMonitorLib/Properties/: AssemblyInfo.cs  AssemblyLibInfo.cs  AssemblyVersion.cs
PluginCodexQuota/: .gitignore  CodexQuotaTrafficMonitor.cpp  README.md  build.cmd
PluginCodexQuota/runtime/: AuthorizeCodex.ps1  RefreshCodexQuota.ps1  quota-state.example.json  read-codex-quota.cjs
PluginDemo/: CustomDrawItem.cpp  CustomDrawItem.h  CustomDrawItem2.cpp  CustomDrawItem2.h  DataManager.cpp  DataManager.h  OptionsDlg.cpp  OptionsDlg.h  PluginDemo.cpp  PluginDemo.h  PluginDemo.rc  PluginDemo.vcxproj  PluginDemo.vcxproj.filters  PluginSystemDate.cpp  PluginSystemDate.h  PluginSystemTime.cpp  PluginSystemTime.h  dllmain.cpp  framework.h  pch.cpp  pch.h  resource.h
Release/: config.ini
TrafficMonitor/: AboutDlg.cpp  AboutDlg.h  AcknowledgementDlg.cpp  AcknowledgementDlg.h  AdapterCommon.cpp  AdapterCommon.h  AppAlreadyRuningDlg.cpp  AppAlreadyRuningDlg.h  BaseDialog.cpp  BaseDialog.h  CAutoAdaptSettingsDlg.cpp  CAutoAdaptSettingsDlg.h  CMFCColorDialogEx.cpp  CMFCColorDialogEx.h  CPUUsage.cpp  CPUUsage.h  CSkinPreviewView.cpp  CSkinPreviewView.h  CTabCtrlEx.cpp  CTabCtrlEx.h  CVariant.cpp  CVariant.h  CalendarHelper.cpp  CalendarHelper.h  ClassicalTaskbarDlg.cpp  ClassicalTaskbarDlg.h  ColorSettingListCtrl.cpp  ColorSettingListCtrl.h  ColorStatic.cpp  ColorStatic.h  ComboBox2.cpp  ComboBox2.h  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CpuUsage.cpp  CpuUsage.h  D2D1Support.cpp  D2D1Support.h  (+163 more)
TrafficMonitor/PdhHardwareQuery/: CPUUsage.cpp  CPUUsage.h  CpuFreq.cpp  CpuFreq.h  DiskUsage.cpp  DiskUsage.h  GpuUsage.cpp  GpuUsage.h  PdhQuery.cpp  PdhQuery.h
TrafficMonitor/language/: English.ini  French.ini  German.ini  Hebrew.ini  Hungarian.ini  Italian.ini  Japanese.ini  Korean.ini  Polish.ini  Portugues_Brasileiro.ini  Portuguese_Brazilian.ini  Russian.ini  Simplified_Chinese.ini  Slovenian.ini  Spanish.ini  Spanish_Spain.ini  Traditional_Chinese.ini  Turkish.ini  Vietnamese.ini
TrafficMonitor/res/: Acknowledgement.txt  Acknowledgement_en.txt  Acknowledgement_ru.txt  TrafficMonitor.rc2
TrafficMonitor/skins/0默认皮肤/: skin.ini
TrafficMonitor/skins/Taiji-Skin/: skin  skin.ini
TrafficMonitor/skins/Transparent 11/: skin.ini
TrafficMonitor/skins/xml_test/: skin.xml
TrafficMonitor/skins/皮肤01/: skin.ini
TrafficMonitor/skins/皮肤02/: skin.ini
TrafficMonitor/skins/皮肤03/: skin.ini
TrafficMonitor/skins/皮肤05/: skin.ini
TrafficMonitor/skins/皮肤06/: skin.ini
TrafficMonitor/skins/皮肤07/: skin.ini
TrafficMonitor/skins/皮肤08/: skin.ini
TrafficMonitor/skins/皮肤09/: skin.ini
TrafficMonitor/skins/皮肤10/: skin.ini
TrafficMonitor/skins/皮肤10（竖排）/: skin.ini
TrafficMonitor/skins/皮肤11/: skin.ini
TrafficMonitor/skins/默认皮肤2/: skin.ini
TrafficMonitor/tinyxml2/: tinyxml2.cpp  tinyxml2.h
UpdateLog/: update_log.md  update_log_en-us.md  update_log_pl-pl.md  update_log_zh-tw.md
include/: PluginInterface.h
include/OpenHardwareMonitor/: OpenHardwareMonitorApi.h  OpenHardwareMonitorGlobal.h
lib/: tinyxml2.lib  tinyxml2d.lib
lib/x64/: tinyxml2.lib  tinyxml2d.lib
